[gd_scene load_steps=10 format=3 uid="uid://bj602ff2xcmvs"]

[ext_resource type="Script" path="res://scenes/ui/options_menu/options_menu.gd" id="1_8lvqh"]
[ext_resource type="PackedScene" uid="uid://c7em60pdpgrly" path="res://scenes/ui/elements/audio_button.tscn" id="2_jocsc"]

[sub_resource type="Animation" id="Animation_njyff"]
resource_name = "in"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0183449),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_2yr8g"]
resource_name = "out"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_asowv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ivjn"]
_data = {
"RESET": SubResource("Animation_asowv"),
"in": SubResource("Animation_njyff"),
"out": SubResource("Animation_2yr8g")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ts1tk"]
bg_color = Color(0.6, 0.6, 0.6, 0)
shadow_size = 10
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p2euh"]
bg_color = Color(0.6, 0.6, 0.6, 0)
shadow_color = Color(0, 0, 0, 0.701961)
shadow_size = 10
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l2k5y"]

[node name="OptionsMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 213
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 213
theme_override_constants/margin_bottom = 10
script = ExtResource("1_8lvqh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8ivjn")
}

[node name="PanelShadow" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ts1tk")

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelShadow" type="PanelContainer" parent="PanelContainer2/MarginContainer"]
self_modulate = Color(0.2145, 0.33, 0.33, 0.694118)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_p2euh")

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer2/MarginContainer"]
self_modulate = Color(0.5467, 0.766278, 0.77, 0.933333)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 64
text = "Master"
vertical_alignment = 1

[node name="MasterVolume" type="HSlider" parent="PanelContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 3.0
max_value = 1.0
step = 0.1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 64
text = "SFX"
vertical_alignment = 1

[node name="SfxVolume" type="HSlider" parent="PanelContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 3.0
max_value = 1.0
step = 0.1

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 64
text = "MUSIC"
vertical_alignment = 1

[node name="MusicVolume" type="HSlider" parent="PanelContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 3.0
max_value = 1.0
step = 0.1

[node name="HSeparator" type="HSeparator" parent="PanelContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_l2k5y")

[node name="BackButton" parent="PanelContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_jocsc")]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 64
text = "BACK"

[connection signal="value_changed" from="PanelContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MasterVolume" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="PanelContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/SfxVolume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="value_changed" from="PanelContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="pressed" from="PanelContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
